--- a/pom.xml
+++ b/pom.xml
@@ -15,14 +15,16 @@
 		<!-- <spring.version>4.3.2.RELEASE</spring.version> -->
 		<!-- <hibernate.version>5.1.0.Final</hibernate.version> -->
 	</properties>
+
+
 	<dependencies>
-		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
+		<!-- httpclient -->
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
 			<version>4.5.2</version>
 		</dependency>
-		
+
 		<!-- Logging start -->
 		<dependency>
 			<groupId>log4j</groupId>
@@ -55,7 +57,7 @@
 			<artifactId>quartz</artifactId>
 			<version>1.8.6</version>
 		</dependency>
-
+		<!-- quartz end -->
 
 
 		<dependency>
@@ -76,21 +78,31 @@
 			<version>${hibernate.version}</version>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-validator -->
+		<!-- hibernate validate start -->
+
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
-			<version>4.3.0.Final</version>
+			<version>5.0.0.CR2</version>
 		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
 		<dependency>
 			<groupId>javax.validation</groupId>
 			<artifactId>validation-api</artifactId>
-			<version>1.0.0.GA</version>
+			<version>1.1.0.CR1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator-annotation-processor</artifactId>
+			<version>5.0.0.CR2</version>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
+		<!-- <dependency> <groupId>org.hibernate</groupId> <artifactId>hibernate-validator</artifactId> 
+			<version>4.3.0.Final</version> </dependency> -->
+		<!-- <dependency> <groupId>javax.validation</groupId> <artifactId>validation-api</artifactId> 
+			<version>1.0.0.GA</version> </dependency> -->
+		<!-- hibernate validate end -->
+
+		<!-- jackson begin -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
@@ -106,9 +118,9 @@
 			<artifactId>jackson-annotations</artifactId>
 			<version>2.8.1</version>
 		</dependency>
+		<!-- jackson end -->
 
-
-
+		<!-- c3p0 start -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-c3p0</artifactId>
@@ -120,6 +132,7 @@
 			<artifactId>c3p0</artifactId>
 			<version>0.9.5.2</version>
 		</dependency>
+		<!-- c3p0 end -->
 
 		<dependency>
 			<groupId>javax.servlet</groupId>
